--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello world
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <title>Fractal generator</title>
+    <style type="text/css"> canvas { border: 1px solid black; } </style>
+    <script type="text/javascript" src="fraktaali.js"></script>
+    <script type="text/javascript" src="fractaldraw.js"> </script>
+  </head>
+  <body onLoad="drawFractals()">
+    <canvas id="fractal" width="640" height="640"></canvas>
+    <select id="fractalSet" onChange="drawFractals()">
+      <option value="mandelbrot">Mandelbrot</option>
+      <option value="julia">Julia</option>
+    </select> 
+  </body>
+</html>
