--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <title>Fractal generator</title>
     <style type="text/css"> canvas { border: 1px solid black; } </style>
-    <script type="text/javascript" src="fraktaali.js"></script>
-    <script type="text/javascript" src="fractaldraw.js"> </script>
+    <script type="text/javascript" src="javascript/fraktaali.js"> </script>
+    <script type="text/javascript" src="javascript/fractaldraw.js"> </script>
   </head>
   <body onLoad="drawFractals()">
     <canvas id="fractal" width="640" height="640"></canvas>
