updated fraktaali.js again

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <script type="text/javascript" src="javascript/fractaldraw.js"> </script>
   </head>
   <body onLoad="drawFractals()">
-    <canvas id="fractal" width="640" height="640"></canvas>
+    <canvas id="fractal" width="400" height="400"></canvas>
     <select id="fractalSet" onChange="drawFractals()">
       <option value="mandelbrot">Mandelbrot</option>
-      <option value="julia">Julia</option>
-    </select> 
+      <option value="julia">Julia</option>	
+    </select>
+	<p>Click to zoom and wait patiently</p>
   </body>
 </html>
