--- a/index.html
+++ b/index.html
@@ -2,17 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Fractal generator</title>
-    <style type="text/css"> canvas { border: 1px solid black; } </style>
-    <script type="text/javascript" src="javascript/fraktaali.js"> </script>
-    <script type="text/javascript" src="javascript/fractaldraw.js"> </script>
+    <title>sepanmaa.github.io</title>
   </head>
   <body onLoad="drawFractals()">
-    <canvas id="fractal" width="400" height="400"></canvas>
-    <select id="fractalSet" onChange="drawFractals()">
-      <option value="mandelbrot">Mandelbrot</option>
-      <option value="julia">Julia</option>	
-    </select>
-	<p>Click to zoom and wait patiently</p>
+    <a href="fractal.html">fractal generator</a><br/>
+    <a href="brainfuck.html">brainfuck compiler</a>
   </body>
 </html>
