--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8"/>
     <title>sepanmaa.github.io</title>
   </head>
-  <body onLoad="drawFractals()">
-    <a href="fractal.html">fractal generator</a><br/>
-    <a href="brainfuck.html">brainfuck compiler</a>
+  <body>
   </body>
 </html>
