increase screen size

--- a/raycaster.html
+++ b/raycaster.html
@@ -5,6 +5,15 @@
   </head>
   <body>
     <canvas width="640" height="400" id="canvas"></canvas>
+    <style>
+      #canvas {
+      height: 100%;
+      }
+      body {
+      padding: 0px;
+      margin: 0px;
+      }
+    </style>
     <script src="javascript/raycast.js"></script>
   </body>
 </html>
