--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <canvas width="800" height="400" id="canvas" ></canvas>
-    <script src="javascript/main.js"></script>
+    <script src="javascript/mandelbrot.js"></script>
   </body>
 </html>
